--- a/form-validator/qunit.html
+++ b/form-validator/qunit.html
@@ -83,6 +83,8 @@
 
             var values = [
                 {val: 'sasas@sdssds.se', isValid : true},
+                {val: 'sasás@sdssds.se', isValid : false},
+                {val: 'sas+as@sdssds.se', isValid : true},
                 {val: '', isValid : false},
                 {val: 'asdsd@sdsds.se', isValid : true},
                 {val: 'asdsdsd@sdsd.co.uk', isValid : true},
