--- a/form-validator/form-test.html
+++ b/form-validator/form-test.html
@@ -19,7 +19,11 @@
         /* While server is being requested */
         form.validating-server-side {
             background: #F2F2F2;
-            opacity: 0.7;
+        }
+
+        input.validating-server-side {
+            opacity: 0.5;
+            background: lightgoldenrodyellow;
         }
 
         /* modify inputs for password strength */
@@ -190,7 +194,6 @@
     $.formUtils.addValidator({
         name : 'even_number',
         validatorFunction : function(value, $el, config, language, $form) {
-            console.log('Event number');
             return parseInt(value, 10) % 2 === 0;
         },
         borderColorOnError : '',
