--- a/form-validator/form-test.html
+++ b/form-validator/form-test.html
@@ -9,7 +9,9 @@
         /* Form and inputs */
         form {
             width: 500px;
+            margin: 0 auto;
             padding: 20px;
+            display: block;
         }
 
         input.form-control {
@@ -155,6 +157,18 @@
 
     var dev = window.location.hash.indexOf('dev') > -1 ? '.dev' : '';
 
+
+    // Add a new validator
+    $.formUtils.addValidator({
+        name : 'even_number',
+        validatorFunction : function(value, $el, config, language, $form) {
+            return parseInt(value, 10) % 2 === 0;
+        },
+        borderColorOnError : '',
+        errorMessage : 'You have to give an even number',
+        errorMessageKey: 'badEvenNumber'
+    });
+
     window.applyValidation = function() {
         $.validate({
             language : {
@@ -164,12 +178,12 @@
             scrollToTopOnError : true,
             modules : 'security'+dev+', location'+dev+', sweden'+dev+', file'+dev+', uk'+dev,
             onModulesLoaded: function( $form ) {
-                console.log('wii');
                 $('#country-suggestions').suggestCountry();
                 $('#swedish-county-suggestions').suggestSwedishCounty();
                 $('#password').displayPasswordStrength();
             },
             onValidate : function() {
+                console.log('wii');
                 var $callbackInput = $('#callback');
                 if( $callbackInput.val() == 1 ) {
                     return {
@@ -195,16 +209,6 @@
     // Load one module outside $.validate() even though you do not have to
     $.formUtils.loadModules('date'+dev+'.js', false, false);
 
-    // Add a new validator
-    $.formUtils.addValidator({
-        name : 'even_number',
-        validatorFunction : function(value, $el, config, language, $form) {
-            return parseInt(value, 10) % 2 === 0;
-        },
-        borderColorOnError : '',
-        errorMessage : 'You have to give an even number',
-        errorMessageKey: 'badEvenNumber'
-    });
 
 })(jQuery, window);
 </script>
