--- a/form-validator/qunit.html
+++ b/form-validator/qunit.html
@@ -87,6 +87,7 @@
                 {val: 'sas+as@sdssds.se', isValid : true},
                 {val: '', isValid : false},
                 {val: 'asdsd@sdsds.se', isValid : true},
+                {val: 'valid-domain@website.COM', isValid : true},
                 {val: 'asdsdsd@sdsd.co.uk', isValid : true},
                 {val: 'sasas@sdsd.xxx', isValid : true},
                 {val: 'sasas@sdsd.xxz', isValid : false},
