Fixed issue #100 and new release coming up

--- a/form-validator/form-test.html
+++ b/form-validator/form-test.html
@@ -317,7 +317,7 @@
 
     $('#text-area').restrictLength($('#max-len'));
 
-    window.applyValidation(true);
+    window.applyValidation(true, '#form-a', 'element');
     window.applyValidation(false, '#form-b', 'element');
     window.applyValidation(true, '#form-c', $('#error-container'));
 
