--- a/form-validator/qunit.html
+++ b/form-validator/qunit.html
@@ -82,6 +82,25 @@
     function runAllTests() {
 
         /*
+         * Test error message
+         */
+        test('Error messages', function() {
+            var $input = input('', {'':'required'}),
+                mess = $.formUtils.validateInput($input, $.formUtils.LANG, $.formUtils.defaultConfig(), $form);
+
+            equal('You have not answered all required fields', mess, 'Incorrect message');
+
+            $input = input('--', {'':'required alphanumeric', 'error-msg-alphanumeric':'custom for alphanum'}),
+            mess = $.formUtils.validateInput($input, $.formUtils.LANG, $.formUtils.defaultConfig(), $form);
+            equal('custom for alphanum', mess, 'Incorrect message');
+
+            $input = input('sam', {'':'required alphanumeric length', length:'min10', 'error-msg-alphanumeric':'custom for alphanum'}),
+            mess = $.formUtils.validateInput($input, $.formUtils.LANG, $.formUtils.defaultConfig(), $form);
+            equal('You have given an answer shorter than 10 characters', mess, 'Incorrect message');
+
+        });
+
+        /*
          * E-MAIL VALIDATION
          */
         test("E-mail validation", function() {
@@ -230,7 +249,7 @@
                 {val:input('1.0234', {'allowing':'float,negative', '':'number'}), isValid:true},
                 {val:input('1.0235', {'allowing':'float,negative,number', '':'number'}), isValid:true},
                 {val:input('1.0236', {'allowing':'float,negative,number', 'decimal-separator':',', '':'number'}), isValid:false},
-                //{val:input('1,023', {'allowing':'float,negative,number', 'decimal-separator':',', '':'number'}), isValid:true},
+                {val:input('1,023', {'allowing':'float,negative,number', 'decimal-separator':',', '':'number'}), isValid:true},
                 {val:'123', isValid:true},
                 {val:input('12', {'allowing':'range[1;10]', '':'number'}), isValid:false},
                 {val:input('-1', {'allowing':'range[1;10]', '':'number'}), isValid:false},
