Validation required now also applies to inputs of type radio, issue #120

--- a/form-validator/form-test.html
+++ b/form-validator/form-test.html
@@ -120,10 +120,19 @@
             <input name="aplhanumeric only" class="form-control" name="test2" data-validation="alphanumeric" />
         </div>
 
-        <div class="checkbox">
+        <div class="checkbox form-group">
             <label>
                 <input name="checkbox" type="checkbox" data-validation="required" /> Must be checked
             </label>
+        </div>
+
+        <div class="form-group">
+            <label class="control-label">Must choose one</label>
+            <br />
+            <input name="radio" type="radio" data-validation="required" value="1" /> A
+            <input name="radio" type="radio" value="1" /> B
+            <input name="radio" type="radio" value="1" /> C
+            <input name="radio" type="radio" value="1" /> D
         </div>
 
         <div class="form-group">
